--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.5.1",
+    "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/pickers": "^3.2.7",
+    "@material-ui/pickers": "^3.2.8",
+    "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
     "date-fns": "^2.5.0",
     "react": "^16.10.2",
