--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
     "date-fns": "^2.5.0",
+    "material-ui-popup-state": "^1.5.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-fontawesome": "^1.6.1",
