--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-ui-popup-state": "^1.5.1",
     "notistack": "^0.9.7",
     "react": "^16.10.2",
+    "react-beautiful-dnd": "^12.2.0",
     "react-dom": "^16.10.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^7.1.1",
