--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
     "date-fns": "^2.5.0",
+    "file-saver": "^2.0.2",
     "material-ui-popup-state": "^1.5.1",
     "notistack": "^0.9.7",
     "react": "^16.10.2",
