--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "material-ui-popup-state": "^1.5.1",
     "notistack": "^0.9.7",
     "react": "^16.10.2",
+    "react-autosuggest": "^9.4.3",
     "react-beautiful-dnd": "^12.2.0",
     "react-dom": "^16.10.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux-starter-kit": "^0.9.1"
+    "redux-starter-kit": "^0.9.1",
+    "throttle-debounce": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
