--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.42",
     "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
@@ -21,6 +22,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "redux-starter-kit": "^0.9.1",
     "throttle-debounce": "^2.1.0"
   },
