--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.12.20",
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
